# productlab_test_task

./: .gitignore  README.md  manage.py  pyproject.toml
productlab_test_task/: asgi.py  settings.py  urls.py  wsgi.py
wildberries_api/: apps.py  urls.py  views.py
